# mex-dependatest

./: .cruft.json  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cve-scan.yml  linting.yml  open-code.yml
docs/: conf.py  index.rst
mex/dependatest/: main.py
