[project]
name = "mex-dependatest"
version = "0.1.0"
description = "Write a short tagline for your project."
authors = [{ name = "MEx Team", email = "mex@rki.de" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
urls = { Repository = "https://github.com/robert-koch-institut/mex-dependatest" }
requires-python = ">=3.11"
dependencies = [
    "annotated-types >= 0.5.0"
]

[project.optional-dependencies]
dev = [
    "colorama>=0.4.3",
    "SQLAlchemy==1.2.17"
]

[project.scripts]
dependatest = "mex.dependatest.main:main"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend>=2.1.8"]
build-backend = "pdm.backend"
